<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/name"
        android:inputType="textCapWords"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/topping"
        android:textAllCaps="true"
        />

    <CheckBox
        android:id="@+id/whipped_cream_checBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped"
        />

    <CheckBox
        android:id="@+id/Chocolate_checBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/min"
            android:onClick="decrement"
            />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/nol"
                />
              <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus"
                    android:onClick="increment"
                    />

    </LinearLayout>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prize"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/dolar"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Order"
        android:onClick="submitOrder"/>


</LinearLayout>